# DesktopRobot

./: .gitignore  .gitmodules  BACKEND_EXPLANATION.md  BACKING_TRACK_AI_FEATURE.md  CONNECTION_GUIDE.md  EMOTION_SYSTEM.md  NEUTRAL_FACE_ANALYSIS.md  README.md  SPOTIFY_INTEGRATION.md  STRUCTURE.md  package-lock.json  package.json
backend/: .env.example  AUDIO_ANALYSIS_SETUP.md  BATCH_ANALYSIS.md  README.md  VOICE_FORMATS_AND_ELEVENLABS.md  next.config.ts  package-lock.json  package.json  requirements.txt
backend/public/: bridge.js
backend/scripts/: analyze_audio.py  batch_analyze.js
backend/src/app/: App.tsx  (+2 more)
docs/: ARCHITECTURE.md  BACKEND_MIC_WITH_SPOTIFY_AND_COMMANDS.md  EMOTION_SYSTEM.md  METRONOME_BACKEND_TO_FRONTEND.md  RASPBERRY_PI_DEPLOYMENT.md  README.md  SPOTIFY_START_PLAYBACK_INVESTIGATION.md  STRUCTURE.md  TUXGUITAR_CHORD_SOURCE.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: tuner-patch.js  tuner-polyfill.js  tuner.css
frontend/scripts/: codesign-and-run.sh  extract_chords_from_gp.py  generate-chords-from-library.js  generate-library-names.js  generate-scales-from-library.js
frontend/src/: App.css  App.tsx  metronomeAudio.ts  metronomeStore.ts  parseMetronomeCommand.ts  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AnimatedFace.tsx  ChatInterface.css  ChatInterface.tsx  EmotionControls.tsx  RealtimeBridge.css  RealtimeBridge.tsx
(+115 files in other folders)
